--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,6 @@ script:
   - echo FC=${FC}
   - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} config
   - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} all
-  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} test
   - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} install
-  - cd regression-tests; make rtest
+  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} test
+  - cd regression-tests; make rtest; cat betr-tests.testlog
