add BeTR_EcophysConType this effectively ensures everything under betr is independent from lsm. Now the refactoring is literally done, with possibly some minor adjustment in the simulation types. testing:     configure and build - os x, gfortran 6.0.0     unit tests - pass     regression tests - pass     meta tests - pass

--- a/src/betr/betr_dtype/CMakeLists.txt
+++ b/src/betr/betr_dtype/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(BETR_DTYPE_SOURCES
   BeTR_aerocondType.F90
+  BeTR_EcophysConType.F90
   BeTR_biogeophysInputType.F90
   BeTR_biogeoStateType.F90
   BeTR_biogeoFluxType.F90
