Add zlib TPL build.
Add the polymec cmake code for zlib TPL build.

Testing:
    configure and build - os x, gfortran 5.3
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/3rd-party/3rd-party.cfg
+++ b/3rd-party/3rd-party.cfg
@@ -4,3 +4,13 @@ url = http://pfunit.sourceforge.net/
 inclusion_method = git subtree
 local_modifications = no
 license = NOSA v1.3
+dependancy_for = betr unit testing
+
+[zlib]
+version = 1.2.8
+url = http://zlib.net/
+inclusion_method = git subtree
+local_modifications = no
+license = zlib BSD
+dependancy_for = hdf5
+
