Add netcdf-c TPL build.
Add the polymec cmake code for netcdf-c TPL build.

Testing:
    configure and build - os x, gfortran 5.3
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/3rd-party/3rd-party.cfg
+++ b/3rd-party/3rd-party.cfg
@@ -7,7 +7,7 @@ license = NOSA v1.3
 dependancy_for = betr unit testing
 
 [zlib]
-version = 1.2.8
+version = v1.2.8
 url = http://zlib.net/
 inclusion_method = git subtree
 local_modifications = no
@@ -21,4 +21,12 @@ inclusion_method = tar.gz
 local_modifications = no
 license = HDF5
 dependancy_for = netcdf-c
+
+[netcdf-c]
+version = v4.4.0
+url = https://github.com/Unidata/netcdf-c
+inclusion_method = git subtree
+local_modifications = no
+license = netcdf
+dependancy_for = netcdf-fortran
 
