Consistently dump TPL logs on travis builds
Consistently dump the configuration and build logs if errors occur in
TPLs during travis testing.

Testing:
    configure and build - os x, gfortran 5.3.0
    unit tests - pass
    regression tests - pass
    meta-tests - pass

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -30,10 +30,14 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_config.log ${pfunit_config_log})
 
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_config_errors.log ${pfunit_config_err})
-    message(${pfunit_config_log})
-    message(${pfunit_config_err})
-    message(FATAL_ERROR "Configuration of pfunit library failed.")
+    if (TRAVIS_CI)
+      message("Error configuring pfunit:")
+      message(${pfunit_config_log})
+      message(FATAL_ERROR ${pfunit_config_err})
+    else()
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_config_errors.log ${pfunit_config_err})
+      message(FATAL_ERROR "Configuration of pfunit library failed.")
+    endif()
   endif()
 
   message("Building and installing pfunit...")
@@ -43,8 +47,14 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_build.log ${pfunit_build_log})
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_build_errors.log ${pfunit_build_err})
-    message(FATAL_ERROR "Build of pfunit library failed.")
+    if (TRAVIS_CI)
+      message("Error building pfunit:")
+      message(${pfunit_build_log})
+      message(FATAL_ERROR ${pfunit_build_err})
+    else()
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_build_errors.log ${pfunit_build_err})
+      message(FATAL_ERROR "Build of pfunit library failed.")
+    endif()
   endif()
 
 endif()
@@ -73,6 +83,7 @@ if (NOT EXISTS ${Z_LIBRARY})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
       message(WARNING "Configuration of zlib library failed:")
+      message(${zlib_config_log})
       message(FATAL_ERROR ${zlib_config_err})
     else()
       file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/zlib_config_errors.log ${zlib_config_err})
@@ -89,6 +100,7 @@ if (NOT EXISTS ${Z_LIBRARY})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
       message(WARNING "Build of zlib library failed:")
+      message(${zlib_build_log})
       message(FATAL_ERROR ${zlib_build_err})
     else()
       file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/zlib_build_errors.log ${zlib_build_err})
@@ -120,6 +132,7 @@ if (NOT EXISTS ${HDF5_LIBRARY})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
       message(WARNING "Configuration of hdf5 library failed:")
+      message(${hdf5_config_log})
       message(FATAL_ERROR ${hdf5_config_err})
     else()
       file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/hdf5_config_errors.log ${hdf5_config_err})
@@ -136,6 +149,7 @@ if (NOT EXISTS ${HDF5_LIBRARY})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
       message(WARNING "Build of hdf5 library failed:")
+      message(${hdf5_build_log})
       message(FATAL_ERROR ${hdf5_build_err})
     else()
       file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/hdf5_build_errors.log ${hdf5_build_err})
@@ -190,8 +204,14 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config.log ${netcdf_config_log})
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config_errors.log ${netcdf_config_err})
-    message(FATAL_ERROR "Error configuring netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config*.log for details.")
+    if (TRAVIS_CI)
+        file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config_errors.log ${netcdf_config_err})
+        message("Configuring netcdf-c failed:")
+        message(${netcdf-c_config_log})
+        message(FATAL_ERROR ${netcdf-c_config_err})
+      else()
+        message(FATAL_ERROR "Error configuring netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config*.log for details.")
+      endif()
   endif()
 
   message("Building and installing netcdf-c library...")
@@ -201,8 +221,14 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build.log ${netcdf_build_log})
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build_errors.log ${netcdf_build_err})
-    message(FATAL_ERROR "Error building netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build*.log for details.")
+    if (TRAVIS_CI)
+      message("Error building netcdf-c:")
+      message(${netcdf-c_build_log})
+      message(FATAL_ERROR ${netcdf-c_build_err})
+    else()
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build_errors.log ${netcdf_build_err})
+      message(FATAL_ERROR "Error building netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build*.log for details.")
+    endif()
   endif()
 
   # On Macs we need to change the rpath of shared libraries so we can install them elsewhere.
@@ -243,8 +269,14 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config.log ${netcdf_config_log})
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config_errors.log ${netcdf_config_err})
-    message(FATAL_ERROR "Error configuring netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config*.log for details.")
+    if (TRAVIS_CI)
+      message("Error configuring netcdf-fortran:")
+      message(${netcdf-fortran_config_log})
+      message(FATAL_ERROR ${netcdf-fortran_config_err})
+    else()
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config_errors.log ${netcdf_config_err})
+      message(FATAL_ERROR "Error configuring netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config*.log for details.")
+    endif()
   endif()
 
   message("Building and installing netcdf-fortran library...")
@@ -254,8 +286,14 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build.log ${netcdf_fortran_build_log})
   if (NOT stat EQUAL 0)
-    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build_errors.log ${netcdf_fortran_build_err})
-    message(FATAL_ERROR "Error building netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build*.log for details.")
+    if (TRAVIS_CI)
+      message("Error building netcdf-fortran")
+      message(${netcdf-fortran_build_log})
+      message(${netcdf-fortran_build_err})
+    else()
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build_errors.log ${netcdf_fortran_build_err})
+      message(FATAL_ERROR "Error building netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build*.log for details.")
+    endif()
   endif()
 
   # On Macs we need to change the rpath of shared libraries so we can install them elsewhere.
