--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,8 @@ script:
   - echo CC=${CC}
   - echo CXX=${CXX}
   - echo FC=${FC}
-  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} config
-  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} all
-  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} install
-  - make debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} test
+  - make travis=1 debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} config
+  - make travis=1 debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} all
+  - make travis=1 debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} install
+  - make travis=1 debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} test
   - cd regression-tests; make rtest; cat betr-tests.testlog
