Try to cleanup cmake error in travis netcdf-c build
Testing:
    configure and build - os x, gfortran 5.3.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -200,17 +200,17 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   message("Configuring netcdf-c library...")
   execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
-                  OUTPUT_VARIABLE netcdf_config_log ERROR_VARIABLE netcdf_config_err
+                  OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
                   RESULT_VARIABLE stat)
-  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config.log ${netcdf_config_log})
+  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_config.log ${netcdf_c_config_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
-        file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config_errors.log ${netcdf_config_err})
-        message("Configuring netcdf-c failed:")
-        message(${netcdf-c_config_log})
-        message(FATAL_ERROR ${netcdf-c_config_err})
+        file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_config_errors.log ${netcdf_c_config_err})
+        message(WARNING "Configuring netcdf-c failed:")
+        message(${netcdf_c_config_log})
+        message(FATAL_ERROR ${netcdf_c_config_err})
       else()
-        message(FATAL_ERROR "Error configuring netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_config*.log for details.")
+        message(FATAL_ERROR "Error configuring netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_config*.log for details.")
       endif()
   endif()
 
@@ -219,15 +219,15 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
                   OUTPUT_VARIABLE netcdf_build_log ERROR_VARIABLE netcdf_build_err
                   RESULT_VARIABLE stat)
-  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build.log ${netcdf_build_log})
+  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_build.log ${netcdf_build_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
-      message("Error building netcdf-c:")
-      message(${netcdf-c_build_log})
-      message(FATAL_ERROR ${netcdf-c_build_err})
+      message(WARNING "Error building netcdf-c:")
+      message(${netcdf_c_build_log})
+      message(FATAL_ERROR ${netcdf_c_build_err})
     else()
-      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build_errors.log ${netcdf_build_err})
-      message(FATAL_ERROR "Error building netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c_build*.log for details.")
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_build_errors.log ${netcdf_build_err})
+      message(FATAL_ERROR "Error building netcdf-c library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_build*.log for details.")
     endif()
   endif()
 
@@ -265,17 +265,17 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   message("Configuring netcdf-fortran library...")
   execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran
-                  OUTPUT_VARIABLE netcdf_config_log ERROR_VARIABLE netcdf_config_err
+                  OUTPUT_VARIABLE netcdf_fortran_config_log ERROR_VARIABLE netcdf_fortran_config_err
                   RESULT_VARIABLE stat)
-  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config.log ${netcdf_config_log})
+  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_config.log ${netcdf_fortran_config_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
-      message("Error configuring netcdf-fortran:")
-      message(${netcdf-fortran_config_log})
-      message(FATAL_ERROR ${netcdf-fortran_config_err})
+      message(WARNING "Error configuring netcdf-fortran:")
+      message(${netcdf_fortran_config_log})
+      message(FATAL_ERROR ${netcdf_fortran_config_err})
     else()
-      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config_errors.log ${netcdf_config_err})
-      message(FATAL_ERROR "Error configuring netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_config*.log for details.")
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_config_errors.log ${netcdf_fortran_config_err})
+      message(FATAL_ERROR "Error configuring netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_config*.log for details.")
     endif()
   endif()
 
@@ -284,15 +284,15 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran
                   OUTPUT_VARIABLE netcdf_fortran_build_log ERROR_VARIABLE netcdf_fortran_build_err
                   RESULT_VARIABLE stat)
-  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build.log ${netcdf_fortran_build_log})
+  file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_build.log ${netcdf_fortran_build_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
-      message("Error building netcdf-fortran")
-      message(${netcdf-fortran_build_log})
-      message(${netcdf-fortran_build_err})
+      message(WARNING "Error building netcdf-fortran")
+      message(${netcdf_fortran_build_log})
+      message(FATAL_ERROR ${netcdf_fortran_build_err})
     else()
-      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build_errors.log ${netcdf_fortran_build_err})
-      message(FATAL_ERROR "Error building netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran_build*.log for details.")
+      file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_build_errors.log ${netcdf_fortran_build_err})
+      message(FATAL_ERROR "Error building netcdf-fortran library. See ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_build*.log for details.")
     endif()
   endif()
 
